--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   fluttertoast: ^8.2.12
   flutter_localizations:
     sdk: flutter
+  dotted_border: ^3.1.0
+  animate_do: ^4.2.0
+  share_plus: ^11.1.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
