auth api integrated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   animate_do: ^4.2.0
   share_plus: ^11.1.0
   url_launcher: ^6.3.2
+  dio: ^5.9.0
+  pretty_dio_logger: ^1.4.0
+  dartz: ^0.10.1
+  shared_preferences: ^2.5.3
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
