--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   dartz: ^0.10.1
   shared_preferences: ^2.5.3
   toastification: ^3.0.3
+  image_picker: ^1.1.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
