--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   toastification: ^3.0.3
   image_picker: ^1.1.1
   cached_network_image: ^3.4.1
+  connectivity_plus: ^6.1.5
 
 dev_dependencies:
   flutter_test:
