--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image_picker: ^1.1.1
   cached_network_image: ^3.4.1
   connectivity_plus: ^6.1.5
+  just_audio: ^0.10.4
 
 dev_dependencies:
   flutter_test:
