--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   connectivity_plus: ^6.1.5
   just_audio: ^0.10.4
   flutter_local_notifications: ^19.4.1
+  in_app_purchase: ^3.2.3
 
 dev_dependencies:
   flutter_test:
