--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,10 @@ dependencies:
     sdk: flutter
   dotted_border: ^3.1.0
   animate_do: ^4.2.0
-  share_plus: ^11.1.0
   url_launcher: ^6.3.2
   dio: ^5.9.0
   pretty_dio_logger: ^1.4.0
+  share_plus: ^12.0.0
   dartz: ^0.10.1
   shared_preferences: ^2.5.3
   toastification: ^3.0.3
@@ -57,6 +57,11 @@ dependencies:
   just_audio: ^0.10.4
   flutter_local_notifications: ^19.4.1
   in_app_purchase: ^3.2.3
+  awesome_notifications: ^0.10.1
+  app_settings: ^6.1.1
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  device_info_plus: ^12.1.0
 
 dev_dependencies:
   flutter_test:
