--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,5 +54,7 @@
     <true/>
     <key>LSSupportsOpeningDocumentsInPlace</key>
     <true/>
+    <key>NSUserNotificationUsageDescription</key>
+    <string>We need notification permission to send you updates</string>
 </dict>
 </plist>
