--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   device_info_plus: ^12.1.0
+  shimmer_animation: ^2.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
