--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+9
+version: 1.0.0+10
 
 environment:
   sdk: ^3.8.1
@@ -57,12 +57,11 @@ dependencies:
   just_audio: ^0.10.4
   flutter_local_notifications: ^19.4.1
   in_app_purchase: ^3.2.3
-  awesome_notifications: ^0.10.1
+#  awesome_notifications: ^0.10.1
   app_settings: ^6.1.1
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
-  device_info_plus: ^12.1.0
-  shimmer_animation: ^2.2.2
+  device_info_plus: ^12.2.0
   shimmer: ^3.0.0
 
 dev_dependencies:
